fix: fixed so that the mockplaceshandler calls mockranking within it